# openimpact

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  test.yml
doc/source/: API.rst  conf.py  config.rst  index.rst  scripts.rst
docs/source/: ML_and_data.rst  api.rst  conf.py  dataplatform.rst  deployment.rst  first_example.rst  index.rst  installation.rst
docs/source/_static/css/: custom.css
docs/source/auto_examples/: index.rst
docs/source/dataplatform/: getting_started.rst  setup.rst
examples/: README.rst  kelmarsh.toml  pipeline_kelmarsh.py  train_kelmarsh.py
openimpact/: __init__.py  controller.py  postpro.py  utils.py
openimpact-deploy/: __init__.py  configuration.py  loggers.py  openimpact-deploy_config.yaml  utils.py  version.yaml
openimpact-deploy/scripts/: __init__.py
openimpact/api/: main.py  predict.py
openimpact/data/: data_store.py  download.py  pipeline.py  preprocessing.py  wranglers.py
openimpact/data/datasets/: __init__.py  distance.py  graph_gen.py  kelmarsh.py  kelmarsh.toml  utils.py
openimpact/model/: __init__.py  features.py  gnn.py  hparam_tune.py  train.py
src/openimpact_deploy/: main.py  utils.py
tests/: conftest.py  default.toml  test_config.py  test_dataset.py  test_gnn.py  test_preprocessing.py  test_simple.py  test_wrangler.py
tests/data/: __init__.py
tests/scaler/: GNN.pkl
